// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Start /> anonymousLogin: false, firebaseLogin: false 1`] = `
Array [
  <div>
    <div>
      これはスタート画面です。
    </div>
    <PlanetPicture
      color="yellow"
      size="161px"
    />
  </div>,
]
`;

exports[`<Start /> anonymousLogin: false, firebaseLogin: true 1`] = `
Array [
  <div>
    <div>
      これはスタート画面です。
    </div>
    <PlanetPicture
      color="yellow"
      size="161px"
    />
    <FirebaseLoginForm />
  </div>,
]
`;

exports[`<Start /> anonymousLogin: true, firebaseLogin: false 1`] = `
Array [
  <div>
    <div>
      これはスタート画面です。
    </div>
    <PlanetPicture
      color="yellow"
      size="161px"
    />
    <AnonymousLoginForm />
  </div>,
]
`;

exports[`<Start /> anonymousLogin: true, firebaseLogin: true 1`] = `
Array [
  <div>
    <div>
      これはスタート画面です。
    </div>
    <PlanetPicture
      color="yellow"
      size="161px"
    />
    <AnonymousLoginForm />
    <FirebaseLoginForm />
  </div>,
]
`;
